--- a/views/development.ejs
+++ b/views/development.ejs
@@ -17,7 +17,8 @@
                     </div>
 
                     <div class="container py-5 text-center" data-aos="fade-up">
-                        <div class="card card-overwrite" data-aos="fade-up">
+                        <%- include('partials/dev-portfolio'); %>
+                            <!-- <div class="card card-overwrite" data-aos="fade-up">
                             <img src=" /assets/images/home/dev/acopon.png" class="card-img-top"
                                 alt="Screenshot of Acopon Brewing Co. Website">
                             <div class="card-body">
@@ -160,7 +161,7 @@
                                             GitHub</button></a>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
 
 
