--- a/views/partials/design-portfolio.ejs
+++ b/views/partials/design-portfolio.ejs
@@ -1,77 +1,121 @@
 <div id="designProjects" class="container py-5 text-center hideLeft active">
     <!-- Cards Start Here -->
     <div class="card card-overwrite" data-aos="fade-up">
-        <img src=" /assets/images/home/001_azw.png" class="card-img-top"
-            alt="Cover image of AZ Wilderness Brewing Co. Project">
-        <div class="card-body">
-            <p class="card-text">Branding & Print Design</p>
-            <h5 class="card-title">Establishing one of the first breweries to break the mold in Arizona</h5>
-            <div class="viewMoreDiv">
-                <a href="design/azw-branding"><button class="btn text-light BtnStyles">View Project</button></a>
+        <div class="overflow-div">
+            <div class="tmb azw-brand">
+                <div class="card-overlay">
+                    <div class="cta-btns">
+                        <a href="../design/azw-branding"><button class="btn text-light BtnStyles">View
+                                Project</button></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="card-content"">
+            <div class=" categories">
+            <span class="project-chip">Branding</span>
+            <span class="project-chip">Identity</span>
+            <span class="project-chip">Illustration</span>
+            <span class="project-chip">Print</span>
+        </div>
+        <h3>Establishing one of the first breweries to break the mold in Arizona</h3>
+    </div>
+</div>
+<div class="card card-overwrite" data-aos="fade-up">
+    <div class="overflow-div">
+        <div class="tmb acopon-brand">
+            <div class="card-overlay">
+                <div class="cta-btns">
+                    <a href="../design/acopon"><button class="btn text-light BtnStyles">View Project</button></a>
+                </div>
             </div>
         </div>
     </div>
-    <div class="card card-overwrite" data-aos="fade-up">
-        <img src=" /assets/images/home/007_acopon.png" class="card-img-top"
-            alt="Cover image for Acopon Brewing Co. Branding Project">
-        <div class="card-body">
-            <p class="card-text">Branding & Print Design
-            </p>
-            <h5 class="card-title">Designing an unexpected brand in a small but evolving town
-            </h5>
-            <div class="viewMoreDiv">
-                <a href="design/acopon"><button class="btn text-light BtnStyles">View Project</button></a>
+    <div class="card-content"">
+            <div class=" categories">
+        <span class="project-chip">Branding</span>
+        <span class="project-chip">Identity</span>
+        <span class="project-chip">Illustration</span>
+        <span class="project-chip">Print</span>
+    </div>
+    <h3>Designing an unexpected brand in a small but evolving town</h3>
+</div>
+</div>
+<div class="card card-overwrite" data-aos="fade-up">
+    <div class="overflow-div">
+        <div class="tmb azw-illustration">
+            <div class="card-overlay">
+                <div class="cta-btns">
+                    <a href="../design/azw-illustration"><button class="btn text-light BtnStyles">View
+                            Project</button></a>
+                </div>
             </div>
         </div>
     </div>
-    <div class="card card-overwrite" data-aos="fade-up">
-        <img src=" /assets/images/home/005_azw.png" class="card-img-top"
-            alt="Cover image of illustration / labels for AZ Wilderness Brewing Co.">
-        <div class="card-body">
-            <p class="card-text">Illustration & Print Design
-            </p>
-            <h5 class="card-title">A collection of product labels and promotional illustrations
-            </h5>
-            <div class="viewMoreDiv">
-                <a href="design/azw-illustration"><button class="btn text-light BtnStyles">View Project</button></a>
+    <div class="card-content"">
+            <div class=" categories">
+        <span class="project-chip">Illustration</span>
+        <span class="project-chip">Print</span>
+    </div>
+    <h3>A collection of product labels and promotional illustrations</h3>
+</div>
+</div>
+<div class="card card-overwrite" data-aos="fade-up">
+    <div class="overflow-div">
+        <div class="tmb hideout">
+            <div class="card-overlay">
+                <div class="cta-btns">
+                    <a href="../design/hideout"><button class="btn text-light BtnStyles">View Project</button></a>
+                </div>
             </div>
         </div>
     </div>
-    <div class="card card-overwrite" data-aos="fade-up">
-        <img src=" /assets/images/home/002_hideout.png" class="card-img-top" alt="Cover image of Hideout.tv Project">
-        <div class="card-body">
-            <p class="card-text">Product(UI/UX) Design
-            </p>
-            <h5 class="card-title">Launching An Industry First Rewarded Video Platform</h5>
-            <div class="viewMoreDiv">
-                <a href="design/hideout"><button class="btn text-light BtnStyles">View Project</button></a>
+    <div class="card-content"">
+            <div class=" categories">
+        <span class="project-chip">Product</span>
+        <span class="project-chip">UI/UX</span>
+        <span class="project-chip">App Design</span>
+    </div>
+    <h3>Launching an industry first rewarded video platform</h3>
+</div>
+</div>
+<div class="card card-overwrite" data-aos="fade-up">
+    <div class="overflow-div">
+        <div class="tmb azw-logos">
+            <div class="card-overlay">
+                <div class="cta-btns">
+                    <a href="../design/azw-logos"><button class="btn text-light BtnStyles">View Project</button></a>
+                </div>
             </div>
         </div>
     </div>
-    <div class="card card-overwrite" data-aos="fade-up">
-        <img src=" /assets/images/home/004_azw.png" class="card-img-top"
-            alt="Cover image of Logo Projects for AZ Wilderness Brewin Co.">
-        <div class="card-body">
-            <p class="card-text">Idendity / Logo Design
-            </p>
-            <h5 class="card-title">A collection of identity designs in the craft beer industry
-            </h5>
-            <div class="viewMoreDiv">
-                <a href="design/azw-logos"><button class="btn text-light BtnStyles">View Project</button></a>
+    <div class="card-content"">
+            <div class=" categories">
+        <span class="project-chip">Branding</span>
+        <span class="project-chip">Identity</span>
+    </div>
+    <h3>A collection of identity designs in the craft beer industry</h3>
+</div>
+</div>
+<div class="card card-overwrite" data-aos="fade-up">
+    <div class="overflow-div">
+        <div class="tmb adscendmedia">
+            <div class="card-overlay">
+                <div class="cta-btns">
+                    <a href="../design/adscendmedia"><button class="btn text-light BtnStyles">View Project</button></a>
+                </div>
             </div>
         </div>
     </div>
-    <div class="card card-overwrite" data-aos="fade-up">
-        <img src=" /assets/images/home/006_adscend.png" class="card-img-top"
-            alt="Cover image of Adscend Media Branding and Web Design">
-        <div class="card-body">
-            <p class="card-text">Branding, Web, & Product(UI/UX) design
-            </p>
-            <h5 class="card-title">Rebranding, repositioning, and launching new products for a company in a market shift
-            </h5>
-            <div class="viewMoreDiv">
-                <a href="design/adscendmedia"><button class="btn text-light BtnStyles">View Project</button></a>
-            </div>
-        </div>
+    <div class="card-content"">
+            <div class=" categories">
+        <span class="project-chip">Branding</span>
+        <span class="project-chip">Web</span>
+        <span class="project-chip">Product</span>
+        <span class="project-chip">UI/UX</span>
     </div>
+    <h3>Repositioning and launching new products for a company in a market shift</h3>
+</div>
+</div>
+
 </div>
