--- a/views/design.ejs
+++ b/views/design.ejs
@@ -19,89 +19,7 @@
                         </h3>
                     </div>
                     <div class="container py-5 text-center" data-aos="fade-up">
-                        <div class="card card-overwrite" data-aos="fade-up">
-                            <img src=" /assets/images/home/001_azw.png" class="card-img-top"
-                                alt="Cover image of AZ Wilderness Brewing Co. Project">
-                            <div class="card-body">
-                                <p class="card-text">Branding & Print Design</p>
-                                <h5 class="card-title">Establishing one of the first breweries to break the mold in
-                                    Arizona</h5>
-                                <div class="viewMoreDiv">
-                                    <a href="design/azw-branding"><button class="btn text-light BtnStyles">View
-                                            Project</button></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="card card-overwrite" data-aos="fade-up">
-                            <img src=" /assets/images/home/007_acopon.png" class="card-img-top"
-                                alt="Cover image for Acopon Brewing Co. Branding Project">
-                            <div class="card-body">
-                                <p class="card-text">Branding & Print Design
-                                </p>
-                                <h5 class="card-title">Designing an unexpected brand in a small but evolving town
-                                </h5>
-                                <div class="viewMoreDiv">
-                                    <a href="design/acopon"><button class="btn text-light BtnStyles">View
-                                            Project</button></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="card card-overwrite" data-aos="fade-up">
-                            <img src=" /assets/images/home/005_azw.png" class="card-img-top"
-                                alt="Cover image of illustration / labels for AZ Wilderness Brewing Co.">
-                            <div class="card-body">
-                                <p class="card-text">Illustration & Print Design
-                                </p>
-                                <h5 class="card-title">A collection of product labels and promotional illustrations
-                                </h5>
-                                <div class="viewMoreDiv">
-                                    <a href="design/azw-illustration"><button class="btn text-light BtnStyles">View
-                                            Project</button></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="card card-overwrite" data-aos="fade-up">
-                            <img src=" /assets/images/home/002_hideout.png" class="card-img-top"
-                                alt="Cover image of Hideout.tv Project">
-                            <div class="card-body">
-                                <p class="card-text">Product Design
-                                </p>
-                                <h5 class="card-title">Launching An Industry First Rewarded Video Platform</h5>
-                                <div class="viewMoreDiv">
-                                    <a href="design/hideout"><button class="btn text-light BtnStyles">View
-                                            Project</button></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="card card-overwrite" data-aos="fade-up">
-                            <img src=" /assets/images/home/004_azw.png" class="card-img-top"
-                                alt="Cover image of Logo Projects for AZ Wilderness Brewin Co.">
-                            <div class="card-body">
-                                <p class="card-text">Idendity / Logo Design
-                                </p>
-                                <h5 class="card-title">A collection of identity designs in the craft beer industry
-                                </h5>
-                                <div class="viewMoreDiv">
-                                    <a href="design/azw-logos"><button class="btn text-light BtnStyles">View
-                                            Project</button></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="card card-overwrite" data-aos="fade-up">
-                            <img src=" /assets/images/home/006_adscend.png" class="card-img-top"
-                                alt="Cover image of Adscend Media Branding and Web Design">
-                            <div class="card-body">
-                                <p class="card-text">Branding, Web, & Product(UI/UX) design
-                                </p>
-                                <h5 class="card-title">Rebranding, repositioning, and launching new products for a
-                                    company in a market shift
-                                </h5>
-                                <div class="viewMoreDiv">
-                                    <a href="design/adscendmedia"><button class="btn text-light BtnStyles">View
-                                            Project</button></a>
-                                </div>
-                            </div>
-                        </div>
+                        <%- include('partials/design-portfolio'); %>
                     </div>
             </main>
             <%- include('partials/get-in-touch'); %>
