--- a/views/partials/dev-portfolio.ejs
+++ b/views/partials/dev-portfolio.ejs
@@ -1,133 +1,160 @@
 <div id="devProjects" class="container py-5 text-center hideRight">
     <!-- Cards Start Here -->
     <div class="card card-overwrite" data-aos="fade-up">
-        <img src=" /assets/images/home/dev/acopon.png" class="card-img-top"
-            alt="Screenshot of Acopon Brewing Co. Website">
-        <div class="card-body">
-            <p class="card-text">Acopon Brewing Co.
-            </p>
-            <h5 class="card-title">Landing page for a Micro Brewery just outside of Austin, Tx.</h5>
-            <div class="viewMoreDiv">
-                <a href="https://acoponbrewing.com/" target="new"><button class="btn text-light BtnStyles">View
-                        Live</button></a>
-                <a href="https://github.com/RojoRevolution/acopon" target="new"><button
-                        class="btn text-light BtnStyles">View on GitHub</button></a>
+        <div class="overflow-div">
+            <div class="tmb applyordie">
+                <div class="card-overlay">
+                    <div class="cta-btns">
+                        <a href="https://applyordie.com/" target="_blank" rel="noopener"><button
+                                class="btn text-light BtnStyles">View
+                                Live</button></a>
+                        <a href="https://github.com/RojoRevolution/apply-or-die" target="_blank" rel="noopener"><button
+                                class="btn text-light BtnStyles">View
+                                GitHub</button></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="card-content"">
+            <div class=" categories">
+            <span class="project-chip bootcamp">Student Project</span>
+            <span class="project-chip">MongoDB</span>
+            <span class="project-chip">Express</span>
+            <span class="project-chip">React</span>
+            <span class="project-chip">Node</span>
+        </div>
+        <h3>My Capstone project for a web dev
+            bootcamp, this MERN Application was built to log your job search.</h3>
+    </div>
+</div>
+<div class="card card-overwrite" data-aos="fade-up">
+    <div class="overflow-div">
+        <div class="tmb instance-styler">
+            <div class="card-overlay">
+                <div class="cta-btns">
+                    <a href="https://rojorevolution.github.io/instance-style-options/" target="_blank"
+                        rel="noopener"><button class="btn text-light BtnStyles">View
+                            Live</button></a>
+                    <a href="https://github.com/RojoRevolution/instance-style-options" target="_blank"
+                        rel="noopener"><button class="btn text-light BtnStyles">View
+                            GitHub</button></a>
+                </div>
             </div>
         </div>
     </div>
-    <div class="card card-overwrite" data-aos="fade-up">
-        <img src=" /assets/images/home/dev/apply-or-die.png" class="card-img-top"
-            alt="Screenshot of Apply or Die Project">
-        <div class="card-body">
-            <p class="card-text">Apply or Die
-            </p>
-            <h5 class="card-title">A MongoDB, Express, React and Node application built as the final
-                project in a Coding Bootcamp.</h5>
-            <div class="viewMoreDiv">
-                <a href="https://applyordie.com/" target="new"><button class="btn text-light BtnStyles">View
-                        Live</button></a>
-                <a href="https://github.com/RojoRevolution/apply-or-die" target="new"><button
-                        class="btn text-light BtnStyles">View on GitHub</button></a>
+    <div class="card-content"">
+            <div class=" categories">
+        <span class="project-chip">HTML</span>
+        <span class="project-chip">CSS</span>
+        <span class="project-chip">Javascript</span>
+    </div>
+    <h3>Internal web-app that showcases customization options for Bevy's client web sites.</h3>
+    <p>Enter "SEdemo" to view live site</p>
+</div>
+</div>
+<div class="card card-overwrite" data-aos="fade-up">
+    <div class="overflow-div">
+        <div class="tmb acopon-dev ">
+            <div class="card-overlay">
+                <div class="cta-btns">
+                    <a href="https://acoponbrewing.com/" target="_blank" rel="noopener"><button
+                            class="btn text-light BtnStyles">View
+                            Live</button></a>
+                    <a href="https://github.com/RojoRevolution/acopon" target="_blank" rel="noopener"><button
+                            class="btn text-light BtnStyles">View
+                            GitHub</button></a>
+                </div>
             </div>
         </div>
     </div>
-    <div class="card card-overwrite" data-aos="fade-up">
-        <img src=" /assets/images/home/dev/yay-or-nay.png" class="card-img-top" alt="Screenshot of Yay or Nay Project">
-        <div class="card-body">
-            <p class="card-text">Yay or Nay</p>
-            <h5 class="card-title">An exercise in authentication and relational
-                tables with Node, Express, Passport, MySQL and EJS.</h5>
-            <div class="viewMoreDiv">
-                <a href="https://p002-yay-or-nay.herokuapp.com/" target="new"><button
-                        class="btn text-light BtnStyles">View
-                        Live</button></a>
-                <a href="https://github.com/RojoRevolution/p2_org_decider" target="new"><button
-                        class="btn text-light BtnStyles">View on
-                        GitHub</button></a>
+    <div class="card-content"">
+        <div class=" categories">
+        <span class="project-chip">HTML</span>
+        <span class="project-chip">CSS</span>
+        <span class="project-chip">Javascript</span>
+        <span class="project-chip">jQuery</span>
+        <span class="project-chip">Node</span>
+    </div>
+    <h3>Landing page for a Acopon Brewing Co., just outside of Austin, Tx.</h3>
+</div>
+</div>
+<div class="card card-overwrite" data-aos="fade-up">
+    <div class="overflow-div">
+        <div class="tmb goodday">
+            <div class="card-overlay">
+                <div class="cta-btns">
+                    <a href="https://reagang1997.github.io/INeedADrink/" target="_blank" rel="noopener"><button
+                            class="btn text-light BtnStyles">View
+                            Live</button></a>
+                    <a href="https://github.com/reagang1997/INeedADrink" target="_blank" rel="noopener"><button
+                            class="btn text-light BtnStyles">View
+                            GitHub</button></a>
+                </div>
             </div>
         </div>
     </div>
-    <div class="card card-overwrite" data-aos="fade-up">
-        <img src=" /assets/images/home/dev/eat-da-burger.png" class="card-img-top"
-            alt="Screenshot of Eat da Burger Project">
-        <div class="card-body">
-            <p class="card-text">Eat-Da-Burger
-            </p>
-            <h5 class="card-title">My First foray working with MySQL using Express and Handlebars.</h5>
-            <div class="viewMoreDiv">
-                <a href="https://eat-da-burger-rojo.herokuapp.com/" target="new"><button
-                        class="btn text-light BtnStyles">View
-                        Live</button></a>
-                <a href="https://github.com/RojoRevolution/013-Eat-Da-Burger" target="new"> <button
-                        class="btn text-light BtnStyles">View
-                        on GitHub</button></a>
+    <div class="card-content"">
+        <div class=" categories">
+        <span class="project-chip bootcamp">Student Project</span>
+        <span class="project-chip">HTML</span>
+        <span class="project-chip">Foundation</span>
+        <span class="project-chip">Javascript</span>
+        <span class="project-chip">REST API</span>
+    </div>
+    <h3>Group project utlizing multiple API's to check the weather and give you a list of local breweries</h3>
+</div>
+</div>
+<div class="card card-overwrite" data-aos="fade-up">
+    <div class="overflow-div">
+        <div class="tmb weather">
+            <div class="card-overlay">
+                <div class="cta-btns">
+                    <a href="https://rojorevolution.github.io/006-Weather-Dashboard/" target="_blank"
+                        rel="noopener"><button class="btn text-light BtnStyles">View
+                            Live</button></a>
+                    <a href="https://github.com/RojoRevolution/006-Weather-Dashboard" target="_blank"
+                        rel="noopener"><button class="btn text-light BtnStyles">View
+                            GitHub</button></a>
+                </div>
             </div>
         </div>
     </div>
-    <div class="card card-overwrite" data-aos="fade-up">
-        <img src=" /assets/images/home/dev/gdfab.png" class="card-img-top"
-            alt="Screenshot of Good Day for a Beer Project">
-        <div class="card-body">
-            <p class="card-text">Good Day For A Beer Project
-
-            </p>
-            <h5 class="card-title">A group project using serverside API's and local storage.</h5>
-            <div class="viewMoreDiv">
-                <a href="https://reagang1997.github.io/INeedADrink/" target="new"><button
-                        class="btn text-light BtnStyles">View
-                        Live</button></a>
-                <a href="https://github.com/reagang1997/INeedADrink" target="new"><button
-                        class="btn text-light BtnStyles">View on
-                        GitHub</button></a>
+    <div class="card-content"">
+        <div class=" categories">
+        <span class="project-chip bootcamp">Student Project</span>
+        <span class="project-chip">HTML</span>
+        <span class="project-chip">Bootstrap</span>
+        <span class="project-chip">Javascript</span>
+        <span class="project-chip">REST API</span>
+        <span class="project-chip">Local Storage</span>
+    </div>
+    <h3>A Wheather App project using serverside API's and local storage.</h3>
+</div>
+</div>
+<div class="card card-overwrite" data-aos="fade-up">
+    <div class="overflow-div">
+        <div class="tmb quiz">
+            <div class="card-overlay">
+                <div class="cta-btns">
+                    <a href="https://rojorevolution.github.io/004_Code_Quiz/" target="_blank" rel="noopener"><button
+                            class="btn text-light BtnStyles">View
+                            Live</button></a>
+                    <a href="https://github.com/RojoRevolution/004_Code_Quiz" target="_blank" rel="noopener"><button
+                            class="btn text-light BtnStyles">View
+                            GitHub</button></a>
+                </div>
             </div>
         </div>
     </div>
-    <div class="card card-overwrite" data-aos="fade-up">
-        <img src=" /assets/images/home/dev/daily_planner.png" class="card-img-top"
-            alt="Screenshot of Workdat Scheduler">
-        <div class="card-body">
-            <p class="card-text">Daily Planner App
-            </p>
-            <h5 class="card-title">Local Storage and the current time are used to dislpay your schedule in the past,
-                present, and future.</h5>
-            <div class="viewMoreDiv">
-                <a href="https://rojorevolution.github.io/005_Work_Day_Scheduler/" target="new"><button
-                        class="btn text-light BtnStyles">View Live</button></a>
-                <a href="https://github.com/RojoRevolution/005_Work_Day_Scheduler" target="new"><button
-                        class="btn text-light BtnStyles">View on GitHub</button></a>
-            </div>
-        </div>
+    <div class="card-content"">
+        <div class=" categories">
+        <span class="project-chip bootcamp">Student Project</span>
+        <span class="project-chip">HTML</span>
+        <span class="project-chip">Bootstrap</span>
+        <span class="project-chip">Javascript</span>
+        <span class="project-chip">Local Storage</span>
     </div>
-    <div class="card card-overwrite" data-aos="fade-up">
-        <img src=" /assets/images/home/dev/weather-dash.png" class="card-img-top"
-            alt="Screenshot of Weather & Forcast Web App">
-        <div class="card-body">
-            <p class="card-text">Weather & Forcast Web App
-            </p>
-            <h5 class="card-title">A Wheather App project using serverside API's and local storage.</h5>
-            <div class="viewMoreDiv">
-                <a href="https://rojorevolution.github.io/006-Weather-Dashboard/" target="new"><button
-                        class="btn text-light BtnStyles">View Live</button></a>
-                <a href="https://github.com/RojoRevolution/006-Weather-Dashboard" target="new"><button
-                        class="btn text-light BtnStyles">View on GitHub</button></a>
-            </div>
-        </div>
-    </div>
-    <div class="card card-overwrite" data-aos="fade-up">
-        <img src=" /assets/images/home/dev/code-quiz.png" class="card-img-top" alt="Screenshot of Dynamic Quiz Project">
-        <div class="card-body">
-            <p class="card-text">Dynamic Quiz
-            </p>
-            <h5 class="card-title">Excercise in generating dynamic elements and using local storage to track scores.
-            </h5>
-            <div class="viewMoreDiv">
-                <a href="https://rojorevolution.github.io/004_Code_Quiz/" target="new"><button
-                        class="btn text-light BtnStyles">View
-                        Live</button></a>
-                <a href="https://github.com/RojoRevolution/004_Code_Quiz" target="new"><button
-                        class="btn text-light BtnStyles">View on
-                        GitHub</button></a>
-            </div>
-        </div>
-    </div>
+    <h3>A quiz app that loads dynamic content and tracks your score using local storage.</h3>
+</div>
+</div>
 </div>
