updated about page

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -10,11 +10,11 @@
                         <h2 class="text-center">I love to design and build unique brands and digital products.</h2>
                     </div>
                     <div class="container p-5">
-                        <div class="row">
+                        <div class="row p-5">
                             <div class="col-md-4">
-                                <div class="p-5">
-                                    <img src="/assets/images/about/rojo.png" alt="Photo of David Rojo" class="img-size"
-                                        data-aos="fade-up">
+                                <div class="">
+                                    <img src="/assets/images/about/davidrojo.png" alt="Photo of David Rojo"
+                                        class="img-size" data-aos="fade-up">
                                 </div>
                             </div>
                             <div class="col-md-8">
@@ -26,16 +26,15 @@
                                     design
                                     for digital products. <br><br>
 
-                                    I believe good design requires an understanding not only of your target audience /
-                                    end
-                                    users, but also the requirements and goals of the business and stake holders. I
+                                    I believe design is a beautiful dance between serving the target audience / end
+                                    users, and fulfilling the business requirements. I
                                     approach
                                     projects empathetically, with curiousity, and with a healthy amount of enthusiastic
                                     skeptism. I believe design is collaborative and iterative, and while my goal is to
                                     solve
                                     communication and user experience problems, it is not best done alone. So I strive
                                     to
-                                    also be a facilitator for everyone involved.<br><br>
+                                    always be a facilitator for everyone involved.<br><br>
 
                                     Currently I am employed full-time as a Web and UI Designer with <a href="bevy.com"
                                         target="_blank">Bevy</a>, and I continue to freelance in my spare time with an
