--- a/views/about.ejs
+++ b/views/about.ejs
@@ -7,18 +7,18 @@
                 <section id="postHero" class="container-flex padding-top-200">
                     <div class="container" data-aos="fade-up">
                         <h1>Howdy, I'm David Rojo.</h1>
-                        <h2 class="text-center">I love to design and build unique brands and digital products.</h2>
+                        <h3 class="text-center">I design and build unique brands and digital products.</h2>
                     </div>
                     <div class="container p-5">
-                        <div class="row p-5">
+                        <div class="row">
                             <div class="col-md-4">
-                                <div class="">
+                                <div class="p-3">
                                     <img src="/assets/images/about/davidrojo.png" alt="Photo of David Rojo"
                                         class="img-size" data-aos="fade-up">
                                 </div>
                             </div>
                             <div class="col-md-8">
-                                <p class="px-5" data-aos="fade-up">Over the past 15 years I have worked in a large
+                                <p data-aos="fade-up">Over the past 15 years I have worked in a large
                                     variety
                                     of design
                                     roles. From print
