added credit for azw photo

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -482,6 +482,7 @@ background:#a53434;
 
 .azw-branding-hero {
     background: url('/assets/images/interior/azw-branding/wilderness_hero.jpg')no-repeat fixed;
+    position: relative;
 }
 
 .logo-max-size {
