--- a/views/azw-branding.ejs
+++ b/views/azw-branding.ejs
@@ -9,6 +9,8 @@
                         <img class="img-size logo-max-size"
                             src="/assets/images/interior/azw-branding/azw_logo_white.svg" alt="Adscend Media Logo"
                             data-aos="fade-up">
+                        <p class="excerpt">Photo credit: Jonathan Buford <br>
+                            Co-founder AZ Wilderness Brewing Co.</p>
                     </div>
                 </div>
                 <div id="postHero" class="container-flex pt-5">
