--- a/views/about.ejs
+++ b/views/about.ejs
@@ -26,8 +26,7 @@
                                     design
                                     for digital products. <br><br>
 
-                                    I believe design is a beautiful dance between serving the target audience / end
-                                    users, and fulfilling the business requirements. I
+                                    I
                                     approach
                                     projects empathetically, with curiousity, and with a healthy amount of enthusiastic
                                     skeptism. I believe design is collaborative and iterative, and while my goal is to
@@ -36,7 +35,7 @@
                                     to
                                     always be a facilitator for everyone involved.<br><br>
 
-                                    Currently I am employed full-time as a Web and UI Designer with <a href="bevy.com"
+                                    Currently I am employed full-time as a Product Designer with <a href="bevy.com"
                                         target="_blank">Bevy</a>, and I continue to freelance in my spare time with an
                                     emphasis in
                                     the
@@ -88,7 +87,7 @@
                             <div class="col-md-8">
                                 <ul id="designSkills">
                                     <li data-aos="fade-up">
-                                        <h3>Web Designer | Apr 2021 - Present</h3>
+                                        <h3>Senior Product Designer | Apr 2021 - Present</h3>
                                         <p>Bevy | Remote</p>
                                     </li>
                                     <li data-aos="fade-up">
