mobile menu updates and minor about page updates

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -36,7 +36,8 @@
                                     always be a facilitator for everyone involved.<br><br>
 
                                     Currently I am employed full-time as a Product Designer with <a href="bevy.com"
-                                        target="_blank">Bevy</a>, and I continue to freelance in my spare time with an
+                                        target="_blank" rel="noopener noreferrer">Bevy</a>, and I continue to freelance
+                                    in my spare time with an
                                     emphasis in
                                     the
                                     craft beer industry. The majority of my freelance projects are from repeat clients,
