--- a/views/azw-logos.ejs
+++ b/views/azw-logos.ejs
@@ -47,14 +47,17 @@
                             <div class="col-md-9">
                                 <p>Before this brewpub even began packaging their beer, we already new we wanted to
                                     create individual stories and brands for as many of their individual products as
-                                    possible. This allowed the small brewpub to not only better promote their products,
+                                    possible. This allowed the small brewpub to not only better promote their
+                                    products,
                                     but also gave them greater touch points for merchandising, which can be a huge
                                     revenue driver for breweries.
                                     <br><br>
                                     By my estimation, I have designed over 200 different identities and labels in
-                                    packaged format for Arizona Wilderness Brewing Co. The brewers typically send me a
+                                    packaged format for Arizona Wilderness Brewing Co. The brewers typically send me
+                                    a
                                     name and a concept for each beer, and I work to translate their vision both in
-                                    identity and label design, making suggestion for improvements along the way. Below
+                                    identity and label design, making suggestion for improvements along the way.
+                                    Below
                                     is a
                                     small
                                     collection of some of my favorite designs over the years.
