--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,8 +1,16 @@
 <header id="mainHeader" class="container-flex">
-    <div class="container-flex pos-relative">
-        <div id="menu" class="pos-absolute">
-            <img id="introMenu" src="/assets/images/menu/menu_icon _white.svg">
-            <img id="contentMenu" class="hide" src="/assets/images/menu/menu_icon.svg">
+    <div id="menu" class="menu pos-absolute">
+        <!-- <img id="introMenu" src="/assets/images/menu/menu_icon _white.svg">
+            <img id="contentMenu" class="hide" src="/assets/images/menu/menu_icon.svg"> -->
+        <div id="introMenu">
+            <div class="line"></div>
+            <div class="line"></div>
+            <div class="line"></div>
+        </div>
+        <div id="contentMenu" class="hide">
+            <div class="line"></div>
+            <div class="line"></div>
+            <div class="line"></div>
         </div>
     </div>
     <div class="container pos-relative">
@@ -11,7 +19,6 @@
         <div id="logoRed" class="logo pos-absolute hide"><a href="/index"><img
                     src="/assets/images/logo/rr_logo.svg"></a>
         </div>
-
     </div>
     <nav id="navIntro">
         <ul>
