--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -753,25 +753,55 @@ margin: 0 auto;
     z-index: 15; /* Stay on top */
     top: 0; /* Stay at the top */
     left: 0;
-    background-color:rgba(232,58,14,.95); 
+    background-color:rgba(232,58,14, 1); 
     overflow-x: hidden; /* Disable horizontal scroll */
     padding-top: 60px; /* Place content 60px from the top */
     transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+    box-shadow: 0 0 20 0 rgba(0,0,0,.2);
   }
   
   /* The navigation menu links */
-  .sidenav a {
-    padding: 8px 8px 8px 32px;
+  .sidenav ul {
+      list-style: none;
+      margin: 0;
+      padding: 40px 0 0 40px;
+  }
+
+  .sidenav ul li {
+      position: relative
+  }
+
+  .sidenav ul li a {
+      text-transform: uppercase;
+    padding: 8px 8px 8px 20px;
     text-decoration: none;
-    font-size: 25px;
+    font-size: 2rem;
     color: #fff;
     display: block;
     transition: 0.3s;
+    margin: 2rem 2rem 2rem 0;
+    text-align: left;
+  }
+  .sidenav ul li a::before {
+      content: '';
+      background: rgba(255,255,255,0);
+      padding: 2px;
+      margin-right: 20px;
+      position: absolute;
+      left: 0;
+      height: 50px;
   }
   
   /* When you mouse over the navigation links, change their color */
   .sidenav a:hover {
-    color: #f1f1f1;
+    opacity: .7;
+    transition: .5s ease-out;
+  }
+
+  .sidenav a:hover::before {
+    background: rgba(255,255,255,1); 
+    transition: .5s ease-out;
+    animation: left-bar .5s ease-out;
   }
   
   /* Position and style the close button (top right corner) */
@@ -782,3 +812,13 @@ margin: 0 auto;
     font-size: 36px;
     margin-left: 50px;
   }
+
+  @keyframes left-bar {
+	0% {
+		height: 0px;
+	}
+
+	100% {
+        height: 50px;
+	}
+}
