--- a/public/assets/css/universal.css
+++ b/public/assets/css/universal.css
@@ -100,6 +100,10 @@ font-size:.9rem;
 line-height: 1.5rem;
 }
 
+.no-scroll {
+    overflow: hidden;
+}
+
 
 /* Footer */
 #footer {
@@ -204,16 +208,68 @@ line-height: 1.5rem;
 }
 
 #menu {
-    width: 25px;
+    width: 55px;
     display:none;
-    top: 15px;
-    left: 15px;
+    top: 26px;
+    left: 30px;
     cursor: pointer;
     transition: .5s;
+    z-index: 20;
+    padding: 15px;
+    border-radius: 50px;
 }
 #menu:hover {
-    transition: .5s;
-    left: 20px;
+    transition: .5s ease-out;
+    background: rgba(0,0,0,.25);
+}
+
+.close-btn {
+    position: absolute;
+    top: 49px;
+    left: 44px;
+    width: 28px;
+    cursor: pointer;
+}
+
+#menu .line {
+    padding: 2px;
+    border-radius: 50px;
+    width: 100%;
+    margin: 4px 0;
+}
+
+#menu #introMenu .line {
+    background: white;
+}
+
+#menu #contentMenu .line {
+    background: var(--rojo-primary);
+}
+
+.bg-red {
+    background: var(--rojo-primary);
+}
+
+.close-btn .close-line {
+    background: white;
+    padding: 2px;
+    border-radius: 50px;
+    width: 100%;
+    margin: 4px 0;
+    position: absolute;
+    top: 0;
+}
+
+.close-btn:hover .close-line {
+    background: rgba(255,255,255,.7);
+}
+
+.close-line.top {
+    transform: rotate(45deg);
+}
+
+.close-line.bottom {
+    transform: rotate(135deg);
 }
 
 header {
