--- a/views/partials/menu.ejs
+++ b/views/partials/menu.ejs
@@ -1,7 +1,21 @@
 <div id="mySidenav" class="sidenav">
-    <a href="javascript:void(0)" class="closebtn text-light">&times;</a>
-    <a href="/design-projects">Design</a>
-    <a href="/dev-projects">Development</a>
-    <a href="/about">About</a>
-    <a href="/about#contact">Contact</a>
+    <div class="close-btn">
+        <!-- <a href="javascript:void(0)" class="closebtn text-light">&times;</a> -->
+        <div class="close-line top"></div>
+        <div class="close-line bottom"></div>
+    </div>
+    <ul>
+        <li>
+            <a href="/design-projects">Design</a>
+        </li>
+        <li>
+            <a href="/dev-projects">Development</a>
+        </li>
+        <li>
+            <a href="/about">About</a>
+        </li>
+        <li>
+            <a href="/about#contact">Contact</a>
+        </li>
+    </ul>
 </div>
